openmediavault (0.5.31) stable; urgency=low

  * Mantis 0000949: IPv6 firewall - fix ICMP issue.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 13 Jan 2014 01:18:37 +0100

openmediavault (0.5.30) stable; urgency=low

  * Update locales.
  * Fix ExtJS bug EXTJSIV-10029 introduced by Mantis 0000936, see
    http://www.sencha.com/forum/showthread.php?264958 for more information.
  * Mantis 0000937: Error opening FTP-transfer log.
  * Mantis 0000945: omv-minify consumes too much cpu. Disable omv-minify for
    the language dictionary file via OMV_I18N_MINIFY_JS_DICT_FILE="no" in
    /etc/default/openmediavault. Defaults to "yes".

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 08 Jan 2014 12:06:31 +0100

openmediavault (0.5.29) stable; urgency=low

  * Update locales.
  * Refactor JS overrides to prevent ECMAScript6 compatibility problems.
  * Mantis 0000936: Plugin-Section - Sortable Collums: sorting is not working
    across more than one side.
  * Mantis 0000940: Incorrect spelling.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 07 Jan 2014 12:13:39 +0100

openmediavault (0.5.28) stable; urgency=low

  * Update locales.
  * Mantis 0000930: Display additional columns in 'System - Updates' and
    'System - Plugins'. Bug http://www.sencha.com/forum/showthread.php?251392-4.1.3-Renderer-of-hidden-column-can-cause-undesired-effect
    seem to be fixed in ExtJS 4.2.2.
  * Mantis 0000932: Enable single-click node expansion in navigation tree.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 01 Jan 2014 16:40:30 +0100

openmediavault (0.5.27) stable; urgency=low

  * Update locales.
  * Various code improvements.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 20 Dec 2013 18:49:42 +0100

openmediavault (0.5.26) stable; urgency=low

  * Update locales.
  * Add chinese (China) language support.
  * Various code improvements.
  * Add 'System | Update Manager | Settings' page.